correggo l'errore (stampo tutte le carte senza aspettare il cambio dell'opzione)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
       <section class="d-flex bg-info justify-content-center" id="research-bar">
         <span class="text-white me-2">FILTRA PER TIPO</span>
-        <select name="" id="select" class="ms-2 w-25 align-self-center">
+        <select name="" id="select" class="ms-2 w-25 px-2 align-self-center">
           <option selected value="all">all</option>
           <option value="animal">animal</option>
           <option value="vegetable">vegetable</option>
